; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/optimizer/plan/extr_planner.c_expression_planner_with_deps.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/optimizer/plan/extr_planner.c_expression_planner_with_deps.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32*, i32*, %struct.TYPE_6__*, i32 }

@T_PlannerGlobal = common dso_local global i32 0, align 4
@NIL = common dso_local global i8* null, align 8
@T_PlannerInfo = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @expression_planner_with_deps(i32* %0, i32** %1, i32** %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i32**, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_6__, align 8
  %9 = alloca %struct.TYPE_6__, align 8
  store i32* %0, i32** %4, align 8
  store i32** %1, i32*** %5, align 8
  store i32** %2, i32*** %6, align 8
  %10 = call i32 @MemSet(%struct.TYPE_6__* %8, i32 0, i32 32)
  %11 = load i32, i32* @T_PlannerGlobal, align 4
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 3
  store i32 %11, i32* %12, align 8
  %13 = load i8*, i8** @NIL, align 8
  %14 = bitcast i8* %13 to i32*
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 1
  store i32* %14, i32** %15, align 8
  %16 = load i8*, i8** @NIL, align 8
  %17 = bitcast i8* %16 to i32*
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 0
  store i32* %17, i32** %18, align 8
  %19 = call i32 @MemSet(%struct.TYPE_6__* %9, i32 0, i32 32)
  %20 = load i32, i32* @T_PlannerInfo, align 4
  %21 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %9, i32 0, i32 3
  store i32 %20, i32* %21, align 8
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %9, i32 0, i32 2
  store %struct.TYPE_6__* %8, %struct.TYPE_6__** %22, align 8
  %23 = load i32*, i32** %4, align 8
  %24 = call i32* @eval_const_expressions(%struct.TYPE_6__* %9, i32* %23)
  store i32* %24, i32** %7, align 8
  %25 = load i32*, i32** %7, align 8
  %26 = call i32 @fix_opfuncids(i32* %25)
  %27 = load i32*, i32** %7, align 8
  %28 = call i32 @extract_query_dependencies_walker(i32* %27, %struct.TYPE_6__* %9)
  %29 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 1
  %30 = load i32*, i32** %29, align 8
  %31 = load i32**, i32*** %5, align 8
  store i32* %30, i32** %31, align 8
  %32 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 0
  %33 = load i32*, i32** %32, align 8
  %34 = load i32**, i32*** %6, align 8
  store i32* %33, i32** %34, align 8
  %35 = load i32*, i32** %7, align 8
  ret i32* %35
}

declare dso_local i32 @MemSet(%struct.TYPE_6__*, i32, i32) #1

declare dso_local i32* @eval_const_expressions(%struct.TYPE_6__*, i32*) #1

declare dso_local i32 @fix_opfuncids(i32*) #1

declare dso_local i32 @extract_query_dependencies_walker(i32*, %struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
